[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/shader/outline.gdshader" type="Shader" id=1]
[ext_resource path="res://assets/shader/Shield.gdshader" type="Shader" id=2]
[ext_resource path="res://scenes/ships/BaseShip.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://assets/image/pngfind.com-crack-png-583540.png" type="Texture" id=5]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.2

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_thickness = 2.0
shader_param/line_multiplier = 0.0

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 2 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Shield/_Shield:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 2, 2, 2, 1 ), Color( 2, 2, 2, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield/_Shield:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shield/_Shield:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ), Vector2( 24, 24 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_away"
length = 30.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 28, 30 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 30 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_fade_away_animation_finished"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Shield/_Shield:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 0.594604, 0.466517, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield/_Shield:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shield/_Shield:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Shield/_Shield:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield/_Shield:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.4, 1, 1 ),
"update": 0,
"values": [ Color( 2, 2, 2, 0 ), Color( 2, 2, 2, 1 ), Color( 2, 2, 2, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shield/_Shield:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.4, 1 ),
"update": 0,
"values": [ Vector2( 16, 16 ), Vector2( 8, 8 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Shield/_Shield:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 0.435275, 1.56917, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield/_Shield:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shield/_Shield:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ) ]
}

[node name="BaseShip" type="RigidBody2D"]
mass = 0.1
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
angular_damp = 10.0
script = ExtResource( 3 )

[node name="ShieldRecoverDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -31.2149, -30.683, -32.8967, 32.174, 34.1648, 30.9126, 34.3751, -32.7853 )

[node name="Afterburners" type="Node2D" parent="."]
__meta__ = {
"_editor_description_": "Place afterburners here."
}

[node name="SPrite" type="Node2D" parent="."]

[node name="Chartlet" type="Node2D" parent="SPrite"]
material = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="CrackMask" type="Light2D" parent="SPrite"]
visible = false
position = Vector2( 0.374573, 3.74577 )
scale = Vector2( 0.134007, 0.23086 )
texture = ExtResource( 5 )
color = Color( 0.752941, 0.494118, 0.337255, 1 )
energy = 4.0
mode = 2
range_item_cull_mask = 2

[node name="Weapons" type="Node2D" parent="."]

[node name="Shield" type="Sprite" parent="."]

[node name="_Shield" type="Sprite" parent="Shield"]
visible = false
modulate = Color( 2, 2, 2, 0 )
material = SubResource( 3 )
scale = Vector2( 24, 24 )
texture = ExtResource( 4 )

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Animation" type="AnimationPlayer" parent="."]
anims/break = SubResource( 4 )
anims/fade_away = SubResource( 5 )
anims/full = SubResource( 6 )
anims/recover = SubResource( 7 )
anims/shield = SubResource( 8 )

[connection signal="body_entered" from="." to="." method="_on_BaseShip_body_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_EnemyDetector_body_exited"]
